# Learning_Cuda

./: .README.md.swp  .viminfo  .vimrc  CMakeLists.txt  README.md  engine_create.sh  nvprof.sh  vimrc
Cuda_1/: Cube_array.cu  reference_calc.cpp  reference_hw1.cpp  reference_main.cpp  student_func.cu
Cuda_Book/: README.  README.txt
Cuda_Book/Chapter02/02_memory_overview/02_aos_soa/: aos_soa.cu  aos_soa_solved.cu
Cuda_Book/Chapter02/02_memory_overview/02_matrix_transpose/: .matrix_transpose.cu.swp  matrix_transpose.cu
Cuda_Book/Chapter02/02_memory_overview/03_image_scaling/: image_scale.cu  image_scaling.cu
Cuda_Book/Chapter02/02_memory_overview/04_sgemm/: Makefile
Cuda_Book/Chapter02/02_memory_overview/unified_memory/: unified_memory_prefetch.cu
Cuda_Book/Chapter03/03_reduction/: .Makefile.swp  .reduction_shared_kernel.cu.swp  reduction_shared_kernel.cu
Cuda_Book/Chapter03/04_performance_limiter/: Makefile
Cuda_Book/Chapter03/05_divergence/: Makefile  reduction.cpp  reduction.h  reduction_kernel_interleaving.cu  reduction_kernel_sequential.cu
Cuda_Book/Chapter03/06_limiter_balancing/: Makefile
Cuda_Book/Chapter03/cuda_occupancy/: sgemm.cu
Cuda_Book/Chapter03/reduction/: Makefile  reduction_global.cpp  reduction_global_kernel.cu  reduction_shared_kernel.cu
Cuda_Book/Chapter03/warp_and_thread_block/: cuda_thread_block.cu
Lesson_Code/Lesson2/: atomics  atomics.cu
Problem_Sets/: gpu_pract.cu
Problem_Sets/HW1/: HW1.cpp  main.cpp  student_func.cu
Problem_Sets/HW2/: HW2.cpp  student_func.cu
Problem_Sets/HW3/: student_func.cu
Udemy_course/: ReadMe.md
Udemy_course/Chapter1/: .exercise1.cu.swp  CMakeLists.txt  cuda1  cuda2  exercise1.cu  exercise2.cu  exercise3.cu
Udemy_course/Chapter2/: CMakeLists.txt  common.h  neighbor_reduction.cu  reduction_unroll.cu
tensorrt/Pipeline_ROS/: camera_node.cpp
tensorrt/camera_node/: CMakeLists.txt  package.xml  readme.md
tensorrt/camera_node/src/: @  camera_node.cpp  common.hpp  params.h  params.txt  rektnet.cpp  rektnet.engine  rektnet_torch.cpp  rektnet_trt.engine  yololayer.h  yolov5.cpp
tensorrt/pipeline/: .pipeline_cv.cpp.swo  .rektnet.cpp.swo  .rektnet2.cpp.swo  .rektnet_torch.cpp.swn  .rektnet_torch.cpp.swo  .yolov5.cpp.swo  1  README.md  gen_wts.py  generate_rekt.sh  img_plot.py  new_keypoints.onnx  pipeline_cv.cpp  rektnet.cpp  rektnet2.cpp  rektnet_torch.cpp  traced_rektnet.pt  yolov5.cpp
tensorrt/python_poc/: batch_dim.ipynb  bounding_box_crop.py  pipeline.py  requirements.txt
tensorrt/python_poc/RektNet/: .keypoint_detect.py.swp  Datatracker.py  __init__.py  detect.py  download_weights.sh  keypoint_detect.py  keypoint_net.py  resnet.py  utils.py
tensorrt/python_poc/yolo/: detect.py
tensorrt/python_poc/yolo/models/: common.py  experimental.py  export.py  yolo.py
tensorrt/python_poc/yolo/utils/: datasets.py  general.py
tensorrt/rektnet_parse/: .inference.py.swp  .trt_convert.cpp.swp  1  inference.py  keypoint_engine.trt  new_keypoints5.onnx  new_keypoints_bs1.onnx  rekt.engine  rektnet.engine  rektnet1.engine  trt_convert.cpp  trt_convert.py
tensorrt/torch_test/: .example.cpp.swo  .example.cpp.swp  CMakeLists.txt  example.cpp  traced_rektnet.pt
tensorrt/yolov5/: .gitignore  .test.py.swp  .utils.cpp.swo  .utils.cpp.swp  .yolov5.cpp.swo  .yolov5.cpp.swp  .yolov5_trt.py.swp  1  CMakeLists.txt  common.hpp  utils.cpp  yololayer.h  yolov5.cpp  yolov5_trt.py
utils/: .nbody.cu.swp  1  async_malloc.cu  conky-manager.txt  get_info.cu  memcpy.cu  nbody.cu  profile.sh  saxpy.cu  stream.cu
