<?xml version="1.0"?>
<package format="2">
  <name>camera_node</name>
  <version>0.0.1</version>
  <description>camera_node</description>
  
  <maintainer email="cepefz00@hs-esslingen.de">Cedric Perauer</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>pylon_camera</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>  
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>


  
</package>

